--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+    --tw-bg-opacity: 1;
+    background-color: rgb(244 244 245 / var(--tw-bg-opacity))
+} */
